fix centering on small screens

--- a/styles/_mainDisplay.scss
+++ b/styles/_mainDisplay.scss
@@ -3,6 +3,7 @@
 
 .main-display { 
     padding:20px;
+    overflow:auto;
     .title { 
         text-align: center;
         color: $light-color;
