--- a/styles/main.css
+++ b/styles/main.css
@@ -120,6 +120,7 @@ main .display-list {
 
 .main-display {
   padding: 20px;
+  overflow: auto;
 }
 .main-display .title {
   text-align: center;
